Added basic CSS to make the web-site look better

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin-Recipes</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
     <img src="./img/chef.png" alt="Chef">
     <br>
-    <ul>
+    <ul class="list">
         <li><a href="./recipes/burrito.html">Chicken Fajita Burrito</a></li>
         <li><a href="./recipes/baked-kale-chips.html">Baked Kale Chips </a></li>
         <li><a href="./recipes/mexican-mocha.html">Mexican Mocha</a></li>
