--- a/recipes/mexican-mocha.html
+++ b/recipes/mexican-mocha.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mexican Mocha</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Mexican Mocha</h1>
