--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <div class="container">
+        <h1>Odin Recipes</h1>
 
-    <img src="./img/chef.png" alt="Chef">
-    <br>
-    <ul class="list">
-        <li><a href="./recipes/burrito.html">Chicken Fajita Burrito</a></li>
-        <li><a href="./recipes/baked-kale-chips.html">Baked Kale Chips </a></li>
-        <li><a href="./recipes/mexican-mocha.html">Mexican Mocha</a></li>
-    </ul>
+        <img src="./img/chef.png" alt="Chef">
+        <br>
+        <ul class="main-list">
+            <li><a href="./recipes/burrito.html">Chicken Fajita Burrito</a></li>
+            <li><a href="./recipes/baked-kale-chips.html">Baked Kale Chips </a></li>
+            <li><a href="./recipes/mexican-mocha.html">Mexican Mocha</a></li>
+        </ul>
+    </div>
+  
  
    
 
